One link for 2 packs.